--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.2.5
 Django==3.0.4
 django-countries==6.1.2
+django-crum==0.7.7
 django-phone-field==1.8.0
 djangorestframework==3.11.0
-pip==20.0.2
 drf-writable-nested==0.5.4
-django-crum==0.7.7
+pytz==2020.1
+sqlparse==0.3.1
